--- a/lib/live_chat_web/live/room_live.html.leex
+++ b/lib/live_chat_web/live/room_live.html.leex
@@ -1,20 +1,52 @@
-<p> Currently chatting in <strong><%= @room_id %></strong> as <strong><%= @username %></strong></p>
-
-<div id="chat-container"> 
-  <div id="chat-messages" phx-update="append">
+<div class="flex-1 p:2 sm:p-6 flex flex-col m-auto h-[40rem] w-[40rem]" >
+   <div class="flex sm:items-center py-3 border-b-2 border-gray-200">
+      <div class="relative flex items-center space-x-4">
+         <div class="relative">
+            <span class="absolute text-green-500 right-0 bottom-0">
+               <svg width="20" height="20">
+                  <circle cx="8" cy="8" r="8" fill="currentColor"></circle>
+               </svg>
+            </span>
+         </div>
+         <div class="flex flex-col leading-tight">
+            <div class="text-2xl mt-1 flex items-center">
+               <span class="text-gray-700 mr-3">Chat room: <%= @room_id %></span>
+            </div>
+            <span class="text-lg text-gray-600">As: <%= @username %></span>
+         </div>
+      </div>
+   </div>
+   
+   <div id="chat-messages" phx-hook="Scroll" class="flex flex-1 flex-col space-y-4 p-3 overflow-scroll">
       <%= for message <- @messages do %>
-        <%= display_message(message) %>
+         <div class="chat-message">
+            <div class="flex items-end">
+               <div class="flex flex-col space-y-2 text-xs max-w-xs mx-2 order-2 items-start">
+                  <div  id="" phx-update="append">
+                     <%= display_message(message) %>
+                  </div>
+               </div>
+            </div>
+         </div>
       <% end %>
-  </div>
-  <div id="user-list">
-    <h3> Users Online </h3>
-      <%= for user <- @user_list do %>
-        <p> <%= user %>
-      <% end %>
-  </div>
-</div>
+   </div>
+   
+   <div class="border-t-2 border-gray-200 px-4 pt-4 mb-2 sm:mb-0">
+         <%= f = form_for :chat, "#", id: "chat-form", phx_submit: :submit_message, phx_change: :form_update %>
+          <div class="w-full focus:outline-none focus:placeholder-gray-400 text-gray-600 placeholder-gray-600 py-3 flex">
+             <%= text_input f, :message, value: @message, placeholder: "Enter your message...", class: "rounded-l-lg p-4 border-t mr-0 border-b border-l text-gray-800 border-gray-200 bg-white" %>
+             <button class="px-8 rounded-r-lg bg-yellow-400  text-gray-800 font-bold p-4 uppercase border-yellow-500 border-t border-b border-r">
+               Send  
+               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-6 w-6 transform rotate-90">
+                  <path d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"></path>
+               </svg>
+            </button>
+         </div>
+      </form>  
+   </div>
+<div>
 
-<%= f = form_for :chat, "#", id: "chat-form", phx_submit: :submit_message, phx_change: :form_update %>
-  <%= text_input f, :message, value: @message, placeholder: "Enter your message..." %>
-</form>
+ 
+
+   
 
