--- a/lib/live_chat_web/live/page_live.html.heex
+++ b/lib/live_chat_web/live/page_live.html.heex
@@ -1,1 +1,6 @@
-<button phx-click="random-room" title="Create a random room"> Create a random room </button>
+<nav class="navbar navbar-expand-lg shadow-md py-2 bg-white relative flex justify-center w-full">
+  <h1> Phoenix Live Chat - No DB - Random UserNames </h1>
+</nav>
+<div class="flex justify-center">
+  <button class="mt-10 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" phx-click="random-room" title="Create a random room"> Create a random room </button>
+</div>
